# botsies

./: .gitignore  LICENSE  README.md  pyproject.toml  sample_factory_example.py  sf_demo.sh  sf_export.py  sf_export.sh  sf_train.sh
godot/: .gitignore  Botsies.sln  CanvasLayer.cs.uid  base_theme.tres  batch_envs.tscn  battle_scene.gd  battle_scene.gd.uid  battle_scene.tscn  bot_selfplay.tscn  export_presets.cfg  fighter_ai_controller.gd  fighter_ai_controller.gd.uid  footsies_sim.gdextension  footsies_sim.gdextension.uid  gizmo_drawer.gd  gizmo_drawer.gd.uid  godot-export.sh  icon.svg.import  model.onnx  play_against_bot.tscn  project.godot
godot/addons/godot_rl_agents/: godot_rl_agents.gd.uid  icon.png.import  sync.gd  sync.gd.uid
godot/art/: battle_window.png.import  bg.png.import  guard.png.import  round.png.import  round_0.png.import  round_1.png.import  ui.png.import
godot/art/fighter/: F00_BackwardDash.png.import  F00_ForwardDash.png.import  bdash_0.png.import  bdash_1.png.import  bdash_2.png.import  bdash_3.png.import  bwalk_0.png.import  bwalk_1.png.import  bwalk_2.png.import  bwalk_3.png.import  bwalk_4.png.import  bwalk_5.png.import  dead_0.png.import  dead_1.png.import  dead_2.png.import  dead_3.png.import  dead_4.png.import  (+60 more)
godot/audio/: MenuSelect.wav.import  bdash.wav.import  block.wav.import  ender_hit.wav.import  fdash.wav.import  guard_break.wav.import  hit.wav.import  mnormal.wav.import  mspecial.wav.import  nnormal.wav.import  nspecial.wav.import
rust/: Cargo.toml
rust/src/: framedata.rs  input.rs  lib.rs  player.rs  simul.rs  timer.rs
(+17 files in other folders)
