[project]
name = "botsies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "godot-rl>=0.8.2",
    "sample-factory",
    # only needed when AMD GPU is used
    "torch>=2.8.0.dev20250624",
    "torchaudio>=2.8.0.dev20250625",
    "torchvision>=0.23.0.dev20250625",
]

[project.optional-dependencies]
sf = [
    "godot-rl>=0.8.2",
]

[tool.uv.sources]
sample-factory = { git = "https://github.com/alex-petrenko/sample-factory" }

# only needed when AMD GPU is used
[[tool.uv.index]]
url = "https://download.pytorch.org/whl/nightly/rocm6.3"

